# qml-TableView-example

./: .env.example  .gitignore  Notes.org  README.org  cleaning_script.py  irisTableModel.py  justfile  main.py  main.qml  postgresTableModel.py  pyproject.toml  tableModel.py
qml/: EditableTable.qml
