[project]
name = "qml-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.2",
    "polars>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "pyside6>=6.10.1",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.7.2",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
]
